--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<div id="root"></div>
-<script type="module" src="/src/main.jsx"></script>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Club Saludable</title>
+  </head>
+  <body>
+    <h1>Acaba lo que empezaste un día</h1>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
